[package]
name = "bench-tests"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.7"
blake2 = { version = "0.8", default-features = false }
ckb-tool = "0.2.2"
ckb-testtool = "0.2.2"

[dependencies.zkp-r1cs]
git = "https://github.com/sunhuachuang/ckb-zkp"
branch = "dev"
default-features = false

[dependencies.zkp-groth16]
git = "https://github.com/sunhuachuang/ckb-zkp"
branch = "dev"
default-features = false

[dependencies.ark-bls12-381]
git = "https://github.com/arkworks-rs/curves"
default-features = false
features = ["curve"]

[dependencies.ark-ff]
git = "https://github.com/arkworks-rs/algebra"
default-features = false

[dependencies.ark-serialize]
git = "https://github.com/arkworks-rs/algebra"
default-features = false

[dependencies.ark-std]
git = "https://github.com/arkworks-rs/utils"
default-features = false

