[package]
name = "bench-tests"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = "0.7"
blake2 = { version = "0.9", default-features = false }
ckb-tool = "0.3"
ckb-testtool = "0.3"

ark-ff = { version = "0.2", default-features = false }
ark-serialize = { version = "0.2", default-features = false }
ark-std = { version = "0.2", default-features = false }
ark-bls12-381 = { version = "0.2", default-features = false, features = [ "curve" ] }
ark-poly = {version = "0.2", default-features = false }
ark-poly-commit = { version = "0.2", default-features = false }

zkp-r1cs = { version = "0.1", path = "../../r1cs"}
zkp-groth16 = { version = "0.1", path = "../../groth16" }
zkp-bulletproofs = { version = "0.1", path = "../../bulletproofs" }
zkp-clinkv2 = { version = "0.1", path = "../../clinkv2" }
zkp-spartan = { version = "0.1", path = "../../spartan" }
zkp-marlin = { version = "0.1", path = "../../marlin" }
zkp-libra = { version = "0.1", path = "../../libra" }
zkp-hyrax = { version = "0.1", path = "../../hyrax" }
zkp-plonk = { version = "0.1", path = "../../plonk" }

