[package]
name = "bulletproofs-verifier"
version = "0.1.0"
authors = ["SECBIT Labs"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
ckb-std = "0.6.1"

[dependencies.ckb-zkp]
path = "../../"
default-features = false
features = [ "bulletproofs", "bn_256", "bls12_381"]

[profile.release]
# set debug-assertions to true to enable debug macro.
# debug-assertions = true
overflow-checks = true
lto = true
opt-level = "z"
codegen-units = 1
panic = 'abort'

[profile.dev]
overflow-checks = true
lto = true
opt-level = "s"
codegen-units = 16
debug = 0
