[package]
name = "ckb-zkp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
ckb-std = "0.2.2"
ckb-types = { package = "ckb-standalone-types", version = "0.0.1-pre.1", default-features = false }
zkp = { path = "zkp-toolkit", default-features = false, features = [
    "groth16",
    "bn_256"
] }

[profile.release]
overflow-checks = true
lto = true
opt-level = "s"
codegen-units = 1

[workspace]
exclude = ["zkp-toolkit"]
