[package]
name = "universal_spartan_snark_verifier"
version = "0.1.0"
edition = "2018"

[dependencies]
ckb-std = "0.6.1"
postcard = { version = "0.5", default-features = false, features = ["alloc"] }

[dependencies.ckb-zkp]
path = "../../"
default-features = false
features = ["spartan", "bn_256"]

[profile.release]
# set debug-assertions to true to enable debug macro.
# debug-assertions = true
overflow-checks = true
lto = true
opt-level = "z"
codegen-units = 1
panic = 'abort'

[profile.dev]
overflow-checks = true
lto = true
opt-level = "s"
codegen-units = 16
debug = 0
