[package]
name = "math-derive"
version = "0.1.0"
authors = ["Sun"]
description = "A library for deriving serialization traits"
keywords = ["cryptography", "finite fields", "elliptic curves", "pairing", "serialization"]
categories = ["cryptography"]
include = ["Cargo.toml", "src", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
