[package]
name = "curve"
version = "0.1.0"
authors = ["SECBIT Labs"]
description = "A library for finite fields and elliptic curves"
keywords = ["cryptography", "finite fields", "elliptic curves", "pairing"]
categories = ["cryptography"]
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
math = { path = "../math", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"]}
curve25519-dalek = { version = "3", features = ["serde", "u64_backend"], optional = true }
rand = { version = "0.7", default-features = false, optional = true }
subtle = { version = "2.2", default-features = false, optional = true }
zeroize = { version = "1", default-features = false, features = ["alloc"], optional = true }
sha2 = { version = "0.9", default-features = false, optional = true }

[dev-dependencies]
rand = { version = "0.7", default-features = false }
rand_xorshift = "0.2"

[features]
default = [ "std", "secp256k1" ]

full = [
     "bls12_377",
     "bls12_381",
     "bn_256",
     "sw6",
     "mnt4_298",
     "mnt4_753",
     "mnt6_298",
     "mnt6_753",
     "edwards_bls12",
     "edwards_sw6",
     "jubjub",
     "baby_jubjub",
     "curve25519",
     "secp256k1",
]

bls12_377 = []
bls12_381 = []
bn_256 = []
edwards_bls12 = []
edwards_sw6 = []
sw6 = []
mnt4_298 = []
mnt4_753 = []
mnt6_298 = []
mnt6_753 = []
jubjub = ["bls12_381"]
baby_jubjub = ["bn_256"]
curve25519 = ["curve25519-dalek", "rand", "subtle", "zeroize", "sha2"]
secp256k1 = []

std = [ "math/std" ]
parallel = [ "std", "math/parallel" ]
