[package]
name = "mini_clinkv2_ipa_verifier"
version = "0.1.0"
edition = "2018"

[dependencies]
ckb-std = "0.7.2"
blake2 = { version = "0.9", default-features = false }

[dependencies.zkp-clinkv2]
git = "https://github.com/sec-bit/ckb-zkp"
branch = "dev"
default-features = false

[dependencies.ark-bls12-381]
git = "https://github.com/arkworks-rs/curves"
default-features = false
features = ["curve"]

[dependencies.ark-ff]
git = "https://github.com/arkworks-rs/algebra"
default-features = false

[dependencies.ark-serialize]
git = "https://github.com/arkworks-rs/algebra"
default-features = false