[package]
name = "mini_clinkv2_kzg10_verifier"
version = "0.1.0"
edition = "2018"

[dependencies]
ckb-std = "0.7.2"
postcard = { version = "0.5", default-features = false, features = ["alloc"] }

[dependencies.zkp-tookit]
git = "https://github.com/sec-bit/ckb-zkp/zkp-toolkit"
default-features = false
features = ["clinkv2", "bn_256"]